api update, detail, delete role
